# quick

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  build_all.sh  guide.html  index.html  install.sh  iter.qx  ll.v
.cargo/: config.toml
.github/workflows/: rust.yml
bench/: fib.js  fib.qx  long_test.js  long_test.qx  loop.js  loop.qx  test.sh  warmup.qx  web_bench.sh  web_js.js  web_qs.qx
lander/: docs.html  index.html  install.sh  script.js  styles.css
lander/docs/: index.html
scripts/: vendor_llvm.ps1  vendor_llvm.sh
src/: compiler.rs  lib.rs  main.qx  main.rs  parser.rs
test/: program
tests/: integration.rs
tests/samples/: basics.qx  enum_from_json.qx  for_over_list_error.qx  io_write.qx  io_write_error.qx  json_builtins.qx  list_join_error.qx  objects_enums_modules.qx  option_result.qx  range_negative.qx  range_positive.qx
