[workspace]
members = ["runtime"]

[package]
name = "quick"
version = "0.1.1"
authors = ["Trig Northrup <northruptrig@gmail.com>"]
edition = "2024"
rust-version = "1.85"
description = "The QuickScript CLI tool, inspired by cargo"

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[dependencies]
actix = "0.13.5"
inkwell = { version = "0.6.0", features = ["llvm18-1"] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "io-util",
    "time",
    "macros",
    "fs",
] }
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
runtime-lib = []
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3



[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-ar"
